--- a/_config.yml
+++ b/_config.yml
@@ -91,7 +91,7 @@ mathjax_autoNumber: true # false (default), true
 mermaid: # false (default), true
 
 ## Chart
-chart: # false (default), true
+chart: true# false (default), true
 
 
 ## => Paginate
