--- a/_config.yml
+++ b/_config.yml
@@ -20,14 +20,14 @@ text_skin: dark # "default" (default), "dark", "forest", "ocean", "chocolate", "
 highlight_theme: default # "default" (default), "tomorrow", "tomorrow-night", "tomorrow-night-eighties", "tomorrow-night-blue", "tomorrow-night-bright"
 url     : # the base hostname & protocol for your site e.g. https://www.someone.com
 baseurl : # does not include hostname
-title   : 今日子备忘录
+title   : It's the Only Neat Thing to Do
 description: > # this means to ignore newlines until "Language & timezone"
   前天看到了小兔子,昨天是小鹿,今天是你.
 
 
 ## => Language and Timezone
 ##############################
-lang: zh # the language of your site, default as "en"
+lang: en # the language of your site, default as "en"
 timezone: Asia/Shanghai # see https://en.wikipedia.org/wiki/List_of_tz_database_time_zones for the available values
 
 
